Updated Test case with BaseTestStructures for SuperHero, Student & Employee Services