@@ -1,88 +1,89 @@
 package com.spring.crud.demo.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.spring.crud.demo.dto.ResponseDTO;
 import com.spring.crud.demo.dto.StudentDTO;
 import com.spring.crud.demo.exception.InternalServerErrorException;
 import com.spring.crud.demo.exception.NotFoundException;
-import com.spring.crud.demo.mapper.StudentMapper;
+import com.spring.crud.demo.mapper.BaseMapper;
 import com.spring.crud.demo.model.Student;
-import com.spring.crud.demo.service.IStudentService;
+import com.spring.crud.demo.service.StudentService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RequestMapping("/students")
 @RestController(value = "studentController")
-public class StudentController {
+public class StudentController implements BaseController<StudentDTO> {
 
-    private final IStudentService studentService;
-    private final StudentMapper studentMapper;
+    private final StudentService studentService;
+    private final BaseMapper<Student, StudentDTO> studentMapper;
     private final ObjectMapper objectMapper;
 
-    @GetMapping(produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-    public ResponseEntity<List<StudentDTO>> findAllStudents() {
-        List<Student> studentList = studentService.findAllStudents();
+    @Override
+    public ResponseEntity<List<StudentDTO>> getAllRecords() {
+        List<Student> studentList = studentService.getAllRecords();
         if (studentList.isEmpty()) {
             throw new NotFoundException("No record found");
         }
-        return ResponseEntity.status(HttpStatus.OK).body(studentList.stream().map(studentMapper::convertFromEntityToDto).collect(Collectors.toList()));
+        return ResponseEntity.status(HttpStatus.OK).body(studentList.stream().map(studentMapper::convertFromEntityToDto).toList());
     }
 
-    @GetMapping(value = "/{id}", produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-    public ResponseEntity<StudentDTO> findStudentById(@PathVariable int id) {
-        Optional<Student> optionalStudent = studentService.findStudentById(id);
+    @Override
+    public ResponseEntity<StudentDTO> getRecordsById(Integer id) {
+        Optional<Student> optionalStudent = studentService.getRecordsById(id);
         if (optionalStudent.isEmpty()) {
             throw new NotFoundException("No record found with id " + id);
         }
         return ResponseEntity.status(HttpStatus.OK).body(studentMapper.convertFromEntityToDto(optionalStudent.get()));
     }
 
-    @PostMapping(value = "/search", produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-    public ResponseEntity<List<StudentDTO>> findStudentsByExample(@RequestBody Map<String, Object> allRequestParams) {
+    @Override
+    public ResponseEntity<List<StudentDTO>> getAllRecordsByExample(StudentDTO allRequestParams) {
         StudentDTO studentDTO = objectMapper.convertValue(allRequestParams, StudentDTO.class);
-        List<Student> studentList = studentService.findStudentsByExample(studentMapper.convertFromDtoToEntity(studentDTO));
+        List<Student> studentList = studentService.getAllRecordsByExample(studentMapper.convertFromDtoToEntity(studentDTO));
         if (studentList.isEmpty()) {
             throw new NotFoundException("No record found with map " + allRequestParams);
         }
-        return ResponseEntity.status(HttpStatus.OK).body(studentList.stream().map(studentMapper::convertFromEntityToDto).collect(Collectors.toList()));
+        return ResponseEntity.status(HttpStatus.OK).body(studentList.stream().map(studentMapper::convertFromEntityToDto).toList());
     }
 
-    @PostMapping(consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}, produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-    public ResponseEntity<StudentDTO> saveStudent(@RequestBody StudentDTO studentDTO) {
-        Optional<Student> optionalStudent = studentService.saveStudent(studentMapper.convertFromDtoToEntity(studentDTO));
+    @Override
+    public ResponseEntity<StudentDTO> insertRecord(@RequestBody StudentDTO studentDTO) {
+        Optional<Student> optionalStudent = studentService.insertRecord(studentMapper.convertFromDtoToEntity(studentDTO));
         if (optionalStudent.isEmpty()) {
             throw new InternalServerErrorException("Something went wrong");
         }
         return ResponseEntity.status(HttpStatus.CREATED).body(studentMapper.convertFromEntityToDto(optionalStudent.get()));
     }
 
-
-    @PutMapping(value = "/{id}", consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}, produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-    public ResponseEntity<StudentDTO> updateStudent(@PathVariable int id, @RequestBody StudentDTO studentDTO) {
-        Optional<Student> optionalStudent = studentService.updateStudent(id, studentMapper.convertFromDtoToEntity(studentDTO));
+    @Override
+    public ResponseEntity<StudentDTO> updateRecord(Integer id, StudentDTO studentDTO) {
+        Optional<Student> optionalStudent = studentService.updateRecord(id, studentMapper.convertFromDtoToEntity(studentDTO));
         if (optionalStudent.isEmpty()) {
             throw new InternalServerErrorException("Something went wrong");
         }
         return ResponseEntity.status(HttpStatus.ACCEPTED).body(studentMapper.convertFromEntityToDto(optionalStudent.get()));
     }
 
-
-    @DeleteMapping(value = "/{id}", consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}, produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
-    public ResponseEntity<Boolean> deleteStudent(@PathVariable int id) {
-        return ResponseEntity.status(HttpStatus.OK).body(studentService.deleteStudent(id));
+    @Override
+    public ResponseEntity<ResponseDTO> deleteRecordById(Integer id) {
+        if (!studentService.deleteRecordById(id)) {
+            throw new NotFoundException("No record found with id " + id);
+        }
+        return ResponseEntity.status(HttpStatus.ACCEPTED).body(ResponseDTO.builder().status(HttpStatus.ACCEPTED.value()).currentDateTime(String.format("%1$TH:%1$TM:%1$TS", System.currentTimeMillis())).message("Record deleted with id " + id).build());
     }
 
-    @DeleteMapping
-    public ResponseEntity<Void> deleteAllStudent() {
-        studentService.deleteAllStudent();
+    @Override
+    public ResponseEntity<Void> deleteAllRecords() {
+        studentService.deleteAllRecords();
         return ResponseEntity.status(HttpStatus.OK).build();
     }
 }
